--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,6 +31,9 @@ services:
     depends_on: [ollama]
     networks: [ollama-net]
     command: ["--model", "ollama/llama2", "--api_base", "http://ollama:11434", "--port", "4000"]
+    environment:
+      - OPENAI_API_TYPE=openai
+      - OPENAI_API_KEY=dummy-key
     ports:
       - "4000:4000"
 
