--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
               capabilities: [gpu]
     command: ["serve"]
     volumes:
-      - ./ollama/models:/root/.ollama
+      - C:/ollama/models:/root/.ollama
     ports:
       - "11434:11434"
 
@@ -34,6 +34,7 @@ services:
     environment:
       - OPENAI_API_TYPE=openai
       - OPENAI_API_KEY=dummy-key
+      - AZURE_OPENAI_API_KEY=dummy-key
     ports:
       - "4000:4000"
 
@@ -68,7 +69,7 @@ services:
     networks: [ollama-net]
     environment:
       - OPENAI_API_BASE=http://litellm:4000
-      - OPENAI_API_KEY=dummy-key
+      - OPENAI_API_KEY=sk-proj-youwish
     volumes:
       - ./alphaevolve/.tmp_runs:/workspace/.tmp_runs
     command:
