--- a/examples/snake/snake_config.yaml
+++ b/examples/snake/snake_config.yaml
@@ -1,15 +1,13 @@
-max_iterations: 200
+max_iterations: 16
 
 database:
-  population_size: 64
+  population_size: 8
   num_islands: 4
   exploitation_ratio: 0.2
 
 llm:
   models:
-    - name: mistral-local
-      temperature: 0.7
-    - name: deepseek-r1-local
+    - name: gpt-4
       temperature: 0.7
 
 prompt:
